# random-cuda

./: .gitignore  README.md
learn-cuda/: CMakeLists.txt  FAQ.md  ReadMe.md  qinkalc-gpu.pc.in  qinkalc.pc.in  stack.yaml
learn-cuda/haskell-binding/hQinkalc/: ChangeLog.md  hQinkalc.cabal
learn-cuda/haskell-binding/hQinkalc/src/Binding/: HQinkaLC.hs
learn-cuda/include/: bmp.h  linear-combination.h
learn-cuda/source/: hello.cu  img-lb.cc  linear-combination.c  linear-combination.cc  linear-combination.cu  qinkalc.cc  test-lb.c  test-lb.cc
learn-cuda/test/: computing_test.cc
